--- a/android/build.gradle
+++ b/android/build.gradle
@@ -59,5 +59,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.google.android.gms:play-services-analytics:18.0.3"
+    implementation "com.google.android.gms:play-services-ads-identifier:18.0.1"
 }
